# doc2vec-jax

./: .gitignore  Dockerfile  README.md  pyproject.toml
doc2vec/: README.md  generate_training_data.py  models.py  text_helpers.py  train.py
experiments/imdb_sentiment/: README.md
